# Dot2d

./: .gitignore  .gitmodules  CMakeLists.txt  build.sh
assets/scripts/: Level1.lua  launchpad.lua
include/: Camera_movement_system.hpp  Projectile_life_cycle_system.hpp  assets_manager.hpp  camera_follow_component.hpp  collision_system.hpp  damage_system.hpp  ecs.hpp  game.hpp  health_component.hpp  keyboard_control_component.hpp  keyboard_control_system.hpp  level_loader.hpp  movement_system.hpp  projectile_component.hpp  projectile_emit_system.hpp  projectile_emitter_component.hpp  render_collision_system.hpp  render_gui_system.hpp  render_health_bar_system.hpp  render_system.hpp  render_text_system.hpp  sprite_component.hpp  text_label_component.hpp
include/events/: collision_event.hpp  key_press_event.hpp
inlcude/: animation_component.h  animation_system.h  animation_system.hpp  assets_manager.hpp  box_collider_component.h  box_collider_component.hpp  collision_system.h  collision_system.hpp  damage_system.hpp  ecs.h  ecs.hpp  game.h  game.hpp  movement_system.h  movement_system.hpp  render_collision_system.h  render_collision_system.hpp  render_system.h  render_system.hpp  rigid_body_component.h  sprite_component.h  transform_component.h  transform_component.hpp
inlcude/events/: event.hpp  event_bus.hpp
libs/: CMakeLists.txt
src/: assets_manager.cpp  game.cpp  level_loader.cpp  main.cpp
src/ecs/: ecs.cpp
